--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-
 <html>
     <head>
         <meta charset="utf-8" />
         <title>HomePage</title>
+        <meta name="description" content="Assignment1">
+        <meta name="keywords" content="HTML,CSS">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
